# pixelselector

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pixelselector.py  pyproject.toml
.claude/agents/: python-code-reviewer.md
.github/workflows/: ci.yml  codeql.yml
example/: image_pixels.json
tests/: conftest.py  test_io.py  test_load.py  test_main.py  test_state.py  test_ui.py
